# nu-sirve

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  QtGuiApplication1.sln  README.md  ReadSIRVECalibrationFile.m  backup.sh  et q  hq  ity_plot_240911q  q
QtGuiApplication1/: Data_Structures.h  QtGuiApplication1.cpp  QtGuiApplication1.h  QtGuiApplication1.pro  QtGuiApplication1.ui  QtGuiApplication1.vcxproj  QtGuiApplication1.vcxproj.filters  Section.h  abir_reader.cpp  abir_reader.h  abpnuc_reader.cpp  annotation_new.cpp  annotation_new.h  annotations.cpp  annotations.h  background_subtraction.cpp  background_subtraction.h  binary_file_reader.cpp  binary_file_reader.h  calibration_data.cpp  calibration_data.h  clickable_chartview.cpp  clickable_chartview.h  clickable_label.cpp  clickable_label.h  color_correction.cpp  color_correction_lgg.cpp  color_correction_lgg.h  color_correction_plot.cpp  color_correction_plot.h  color_map.cpp  color_map.h  color_scheme.cpp  color_scheme.h  custom_input_dialog.cpp  custom_input_dialog.h  deinterlace.cpp  deinterlace.h  earth.cpp  engineering_data.cpp  (+36 more)
QtGuiApplication1/GeneratedFiles/: qrc_QtGuiApplication1.cpp  ui_QtGuiApplication1.h  ui_location_gui.h  ui_new_location.h
QtGuiApplication1/config/: config.json
QtGuiApplication1/locations/: new_position.json  test1 - Copy (2).json  test1 - Copy (3).json  test1 - Copy.json  updated_location.json
SirveApp/: CMakeLists.txt  Data_Structures.h  Section.cpp  Section.h  SirveApp.cpp  SirveApp.cpp.autosave  SirveApp.h  SirveApp.pro  SirveApp.pro.autosave  SirveApp.pro.user.EMitPF  SirveApp.qrc  SirveApp.ui  abir_reader.cpp  abir_reader.h  abir_reader2.cpp  abir_reader2.h  abp_version.ui  abp_version_dlg.cpp  abp_version_dlg.h  abpnuc_reader.cpp  abpnuc_reader.h  abpnuc_reader2.cpp  abpnuc_reader2.h  annotation_edit_dialog.cpp  annotation_edit_dialog.h  annotation_info.cpp  annotation_info.h  annotation_list_dialog.cpp  annotation_list_dialog.h  annotation_new.cpp  annotation_new.h  annotation_stencil.cpp  annotation_stencil.h  annotations.cpp  annotations.h  application_data.h  auto_tracking.cpp  auto_tracking.h  background_subtraction.cpp  background_subtraction.h  (+140 more)
SirveApp/.qtc_clangd/: compile_commands.json
SirveApp/.qtc_clangd/.cache/clangd/index/: BaseCube_bones.hpp.CEFE5D3850248881.idx  BaseCube_meat.hpp.9B57698EA71CD845.idx  Base_bones.hpp.A68874B8EB37ABA3.idx  Base_meat.hpp.00B99837AFE2A947.idx  Col_bones.hpp.035B85368E7DE505.idx  Col_meat.hpp.CAFFBB9B3104FF96.idx  CubeToMatOp_bones.hpp.4B593D8658CB0930.idx  CubeToMatOp_meat.hpp.B80F4BEBDB093063.idx  Cube_bones.hpp.5FE6B19D9F6FCFF1.idx  Cube_meat.hpp.D2360AE8012B3976.idx  Data_Structures.h.3C8EDC1388D56170.idx  GenCube_bones.hpp.4D1590D036AD74F7.idx  GenCube_meat.hpp.BAE9019FE1DBDEA1.idx  Gen_bones.hpp.1E2B168CF1AA4333.idx  Gen_meat.hpp.CFC4DF1FFA0456B9.idx  GlueCube_bones.hpp.EB1394A29B312248.idx  GlueCube_meat.hpp.3A2B1C27604A992E.idx  Glue_bones.hpp.988F8E45A9801DFA.idx  Glue_meat.hpp.B1549AC4C63327D0.idx  MapMat_bones.hpp.34146261B5D653AD.idx  MapMat_meat.hpp.3CBDF25B760A80E0.idx  Mat_bones.hpp.05B6FF0CF20B5E4B.idx  Mat_meat.hpp.8BA1D2DD66640AA2.idx  OpCube_bones.hpp.EC6DC21D8323B711.idx  OpCube_meat.hpp.F6F181CC41194530.idx  Op_bones.hpp.23BEDC6438D28CFB.idx  Op_meat.hpp.E77CBE595E152A06.idx  Proxy.hpp.79921F2D3709665C.idx  ProxyCube.hpp.C97B3E78F2F9A13C.idx  QAbstractAxis.D1761886E5D26229.idx  QAbstractSeries.D49BBD577220D5E8.idx  QApplication.4F2E5987696169FA.idx  QBoxSet.7D3DFF0FF3F5B301.idx  QBrush.0F47D82DAE5A75AD.idx  QChart.5E82E9170131F774.idx  QChartGlobal.EF254D8A0EB4B8A4.idx  QChartView.16E04510E04E0B3A.idx  QCheckBox.E059E239AF3FEA43.idx  QColor.D85E1D176C2E4447.idx  QComboBox.E8E80F61F708EAD7.idx  (+1085 more)
SirveApp/config/: config.json  det.txt  year_month_leap_seconds.txt
SirveApp/locations/: new_position.json  test1 - Copy (3).json  test1.json
SirveApp/stylesheets/: Modified_Ubuntu.qss
SirveApp/support/: az_el_calculation.cpp  az_el_calculation.h  earth.cpp  earth.h  euler.cpp  euler.h  jtime.cpp  jtime.h  qt_elements_with_ids.cpp  qt_elements_with_ids.h  qthelpers.cpp  qthelpers.h
SirveApp/testing/: main.cpp  run_all_tests.cpp  test_az_el_calculation.cpp  test_az_el_calculation.h  test_bad_pixel_identification.cpp  test_bad_pixel_identification.h  test_bad_pixels.cpp  test_bad_pixels.h  test_example.cpp  test_example.h  test_video_display_zoom.cpp  test_video_display_zoom.h
cmake/: FindArmadillo.cmake  FindFFTW.cmake
docs/: Building-Qt.md  DEBUG.md  INSTALLATION.md  INSTALLATION_CMake.md  TESTING.md
fftw-3.3.5-dll64/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
jkqtPlotter/: .gitignore  CMakeLists.txt  README.md  readme.txt.in
jkqtPlotter/cmake/: jkqtplotter_common_qtsettings.cmake  jkqtplotter_macros.cmake
jkqtPlotter/doc/: jkqtplotter_stylesheet.css
jkqtPlotter/examples/: CMakeLists.txt
jkqtPlotter/lib/: CMakeLists.txt  jkqtplotter.pri
matlab/exports/: autotrack.m  autotrack.ofig
test_release_median_241211b/config/: config.json
test_release_median_241211b/workspace/: JUNE10_clockwise_cal_100-2000_20241216_2352.json  JUNE10_clockwise_cal_100-200_20241208_1501.json  JUNE10_clockwise_cal_100-300_20241207_1753.json  JUNE10_clockwise_cal_100-500_20241211_2055.json  auto_track_1_Frames_1141_1270_20241217_0150.csv  auto_track_1_Frames_1351_1570_20241216_2353.csv  auto_track_1_Frames_1351_1570_20241217_0105.csv  auto_track_1_Frames_139_148_20241211_2029.csv  auto_track_1_Frames_139_148_20241211_2037.csv  auto_track_1_Frames_139_200_20241210_0121.csv  auto_track_1_Frames_139_200_20241210_2237.csv  auto_track_1_Frames_139_200_20241211_1916.csv  auto_track_1_Frames_139_200_20241211_1950.csv  auto_track_1_Frames_139_200_20241211_2038.csv  auto_track_1_Frames_139_200_20241211_2127.csv  auto_track_1_Frames_139_200_20241211_2147.csv  auto_track_1_Frames_139_200_20241211_2204.csv  auto_track_1_Frames_139_200_20241211_2233.csv  auto_track_1_Frames_139_200_20241211_2234.csv  auto_track_1_Frames_139_200_20241211_2238.csv  (+70 more)
(+124 files in other folders)
